--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <button onclick="location.href='html/t06_createAliens.html'">t06 create aliens</button>
             <button onclick="location.href='html/t07_groups.html'">t07: groups</button>
             <button onclick="location.href='html/t08_colliders.html'">t08 colliders</button>
+            <button class="extra" onclick="location.href='html/extra.html'">Extra</button>
         </div>
         <div class="column">
             <button onclick="location.href='html/t20_load_images.html'">t20: load images</button>
