--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
             <button onclick="location.href='html/t02_move_sprite.html'">t02: move a sprite</button>
             <button onclick="location.href='html/t03_gravity.html'">t03: gravity</button>
             <button onclick="location.href='html/t04_collision.html'">t04: collisions</button>
+            <button onclick="location.href='html/loop1.html'">Loop 1</button>
+            <button onclick="location.href='html/loop2.html'">Loop 2</button>
+            <button onclick="location.href='html/loop3.html'">Loop 3</button>
+            <button onclick="location.href='html/loop4.html'">Loop 4</button>
+            <button onclick="location.href='html/loop5.html'">Loop 5</button>
         </div>
         <div class="column">
             <button onclick="location.href='html/t05_createWalls.html'">t05: create walls</button>
             <button onclick="location.href='html/t06_createAliens.html'">t06 create aliens</button>
             <button onclick="location.href='html/t07_groups.html'">t07: groups</button>
             <button onclick="location.href='html/t08_colliders.html'">t08 colliders</button>
-            <button class="extra" onclick="location.href='html/extra.html'">Extra</button>
+            <button onclick="location.href='html/extra.html'">Extra</button>
         </div>
         <div class="column">
             <button onclick="location.href='html/t20_load_images.html'">t20: load images</button>
